final HW #7 submission

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <div class="col-lg-12">
 
     <!-- Currently scheduled trains-->
-      <div class="panel panel-primary">
+      <div class="panel panel-primary" style="padding: 5px; border: 1px solid gray; margin-bottom: 20px; border-radius: 10px">
         <div class="panel-heading">
-          <h3 class="panel-title"><strong>Current Train Schedule</strong></h3>
+          <h3 class="panel-title" style="background-color: gray; color: white; margin: 0; padding 5px"><strong>Current Train Schedule</strong></h3>
         </div>
         <div class="panel-body">
           <table class="table table-sm table-dark" id='current-train-schedule'>
@@ -55,9 +55,9 @@
       </div>
 
       <!-- Add Train Section -->
-      <div class="panel panel-primary">
+      <div class="panel panel-primary" style="padding: 5px; border: 1px solid gray; margin-bottom: 50px; border-radius: 10px">
         <div class="panel-heading">
-          <h3 class="panel-title"><strong>Add Train</strong></h3>
+          <h3 class="panel-title" style="background-color: green; color: white; margin-bottom: 10px; padding 5px"><strong>Add Train</strong></h3>
         </div>
         <div class="panel-body">
 
