final HW #7 submission

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="jumbotron jumbotron-fluid">
       <h1 class="display-4">Hyperloop Schedule</h1>
-      <p class="lead">Thanks to Elon Musk, train travel is faster than ever. View the most recent hyperloop schedule below, and add your own hyperloop service to the schedule for others to see.</p>
+      <p class="lead">Thanks to Elon Musk, train travel is faster than ever! View the most current hyperloop schedule in the first below, and add your own hyperloop service to the schedule for others to see using the form at the bottom of this page.</p>
   </div>
 
   <div class="row">
@@ -35,7 +35,7 @@
     <!-- Currently scheduled trains-->
       <div class="panel panel-primary" style="padding: 5px; border: 1px solid gray; margin-bottom: 20px; border-radius: 10px">
         <div class="panel-heading">
-          <h3 class="panel-title" style="background-color: gray; color: white; margin: 0; padding 5px"><strong>Current Train Schedule</strong></h3>
+          <h3 class="panel-title" style="background-color: gray; color: white; margin: 0; padding 5px"><strong>Current Hyperloop Schedule</strong></h3>
         </div>
         <div class="panel-body">
           <table class="table table-sm table-dark" id='current-train-schedule'>
@@ -57,7 +57,7 @@
       <!-- Add Train Section -->
       <div class="panel panel-primary" style="padding: 5px; border: 1px solid gray; margin-bottom: 50px; border-radius: 10px">
         <div class="panel-heading">
-          <h3 class="panel-title" style="background-color: green; color: white; margin-bottom: 10px; padding 5px"><strong>Add Train</strong></h3>
+          <h3 class="panel-title" style="background-color: green; color: white; margin-bottom: 10px; padding 5px"><strong>Add Hyperloop</strong></h3>
         </div>
         <div class="panel-body">
 
