final HW #7 submission

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="jumbotron jumbotron-fluid">
       <h1 class="display-4">Hyperloop Schedule</h1>
-      <p class="lead">Thanks to Elon Musk, train travel is faster than ever! View the most current hyperloop schedule in the first below, and add your own hyperloop service to the schedule for others to see using the form at the bottom of this page.</p>
+      <p class="lead">Thanks to Elon Musk, train travel is faster than ever! View the most current hyperloop schedule in the first table below. You can also add your own hyperloop service to the schedule for others to see using the form at the bottom of this page.</p>
   </div>
 
   <div class="row">
